🌱A🌱 character template display done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div id="canvas-list"></div>
+	<div id="templates">
+
+	</div>
 </body>
 </html>
