--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script type="module" src="main.js"></script>
 	<link rel="stylesheet" href="main.css">
+	<script type="module" src="main.js" defer></script>
 </head>
 <body>
-	<div id="templates">
+	<label for="font">Font for character display</label>
+	<select name="font" id="font">
+		<option value="GNU Unifont">GNU Unifont</option>
+		<option value="Arial">Arial</option>
+		<option value="Times New Roman">Times New Roman</option>
+		<option value="Noto Sans Symbol">Noto Sans Symbol</option>
+		<option value="Noto Sans SignWriting">Noto Sans SignWriting</option>
+		<option value="NewtonSans">NewtonSans</option>
+		<option value="Comic Sans MS">Comic Sans MS</option>
+	</select>
 
-	</div>
+	<section>
+
+	</section>
+
+
+	<div id="templates">aῶa</div>
 </body>
 </html>
